Update locale page

--- a/pages/docs/configuration/locale-translations.mdx
+++ b/pages/docs/configuration/locale-translations.mdx
@@ -2,222 +2,75 @@ import {Callout} from 'nextra-theme-docs'
 
 # Locale and Translations
 
-<Callout type="warning" emoji="🚧">
-    This page has outdated information and will be updated soon.
-</Callout>
-
-<Callout type="warning" emoji="⚠️">
-    If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on the proxy.
-</Callout>
+SkinsRestorer has an advanced locale system,
+which allows every player to receive a translation in their own language using their Minecraft client locale.
 
 ## Default values
-- [languages](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/resources/languages)
-- [language_english](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language.properties)
-- [command.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/command.properties)
+
+The default locale is `en` (English). If you want to change the default locale, you can do so in the `config.yml` file.
+
+- [locales](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/resources/locales)
+- [locale_english](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale.json)
 
 ## Community translation
+
+SkinsRestorer is translated by the community. If you want to contribute, you can do so by translating the plugin to your language.
 
 ### How to Contribute
 
 We have our own [Crowdin page](https://translate.skinsrestorer.net) where you can contribute your translations.
 
-If your language is missing, you can contact support on our discord.
+If your locale is missing, you can contact support [on our Discord](https://skinsrestorer.net/discord).
 
-## How to update
+## Custom translations
 
-You can download updated translations from our [`dev` branch](https://github.com/SkinsRestorer/SkinsRestorerX/tree/dev/shared/src/main/resources/languages).
+<Callout type="warning" emoji="⚠️">
+    If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on every server as well as on the proxy.
+</Callout>
 
-## Select language
+Inside the `plugins/SkinsRestorer/locale` folder, you can find two folders, `repository` and `custom`.
+Inside `repository`, you can find all the default locale files. These files are used when a locale is not found in the `custom` folder.
+Files inside the `repository` folder should not be edited, as they will be overwritten when updating the plugin.
+If you want to edit a locale, you should copy the file from the `repository` folder to the `custom` folder and edit it there.
+Make sure to update the translation when updating the plugin, as new translations might be added/changed.
 
-### Language codes
+## Locale list
 
-| Language (translated)               | Language            | config value | file name                                                                                                                                           |
-|-------------------------------------|---------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------------------------|
-| Deutsch                             | German              | de           | [language_de.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_de.properties)       |
-| Français                            | French              | fr           | [language_fr.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fr.properties)       |
-| 简体中文（中国大陆）                          | Chinese Simplified  | zh_hk        | [language_zh_hk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_hk.properties) |
-| 繁體中文（台灣）                            | Chinese Traditional | zh_tw        | [language_zh_tw.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_tw.properties) |
-| Polski (Polska)                     | Polish              | pl           | [language_pl.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_pl.properties)       |
-| Norsk Bokmål (Norge)                | Norwegian Bokmål    | no           | [language_no.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_no.properties)       |
-| Español                             | Spanish             | es           | [language_es.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_es.properties)       |
-| 日本語 (Nihongo)                       | Japanese            | ja           | [language_ja.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ja.properties)       |
-| Suomi (Suomi)                       | Finnish             | fi           | [language_fi.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fi.properties)       |
-| Italiano (Italia)                   | Italian             | it           | [language_it.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_it.properties)       |
-| Čeština (Česká Republika)           | Czech               | cs           | [language_cs.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_cs.properties)       |
-| Українська (Ukrayins'ka)            | Ukrainian           | uk           | [language_uk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_uk.properties)       |
-| Magyar (Magyarország)               | Hungarian           | hu           | [language_hu.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_hu.properties)       |
-| Română (România)                    | Romanian            | ro           | [language_ro.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ro.properties)       |
-| Türkçe (Türkiye)                    | Turkish             | tr           | [language_tr.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_tr.properties)       |
-| ไทย (thay)                          | Thai                | th           | [language_th.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_th.properties)       |
-| 한국어 (Hangugeo)                      | Korean              | ko           | [language_ko.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ko.properties)       |
-| Български (България)                | Bulgarian           | bg           | [language_bg.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_bg.properties)       |
-| Català (Catalunya)                  | Catalan             | ca           | [language_ca.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ca.properties)       |
-| Dansk (Danmark)                     | Danish              | da           | [language_da.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_da.properties)       |
-| Lietuvių                            | Lithuanian          | lt           | [language_it.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_lt.properties)       |
-| Nederlands                          | Dutch               | nl           | [language_nl.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_nl.properties)       |
-| اللغة العربية (alLuġah al'Arabiyye) | Arabic              | ar           | [language_ar.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_ar.properties)       |
+Here is a list of all the locales that are currently available in SkinsRestorer.
+
+### Locale codes
+
+| Language (translated)               | Locale              | config value | file name                                                                                                                         |
+|-------------------------------------|---------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------|
+| Deutsch                             | German              | de           | [locale_de.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_de.json)       |
+| Français                            | French              | fr           | [locale_fr.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_fr.json)       |
+| 简体中文（中国大陆）                          | Chinese Simplified  | zh_hk        | [locale_zh_hk.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_zh_hk.json) |
+| 繁體中文（台灣）                            | Chinese Traditional | zh_tw        | [locale_zh_tw.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_zh_tw.json) |
+| Polski (Polska)                     | Polish              | pl           | [locale_pl.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_pl.json)       |
+| Norsk Bokmål (Norge)                | Norwegian Bokmål    | no           | [locale_no.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_no.json)       |
+| Español                             | Spanish             | es           | [locale_es.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_es.json)       |
+| 日本語 (Nihongo)                       | Japanese            | ja           | [locale_ja.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ja.json)       |
+| Suomi (Suomi)                       | Finnish             | fi           | [locale_fi.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_fi.json)       |
+| Italiano (Italia)                   | Italian             | it           | [locale_it.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_it.json)       |
+| Čeština (Česká Republika)           | Czech               | cs           | [locale_cs.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_cs.json)       |
+| Українська (Ukrayins'ka)            | Ukrainian           | uk           | [locale_uk.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_uk.json)       |
+| Magyar (Magyarország)               | Hungarian           | hu           | [locale_hu.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_hu.json)       |
+| Română (România)                    | Romanian            | ro           | [locale_ro.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ro.json)       |
+| Türkçe (Türkiye)                    | Turkish             | tr           | [locale_tr.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_tr.json)       |
+| ไทย (thay)                          | Thai                | th           | [locale_th.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_th.json)       |
+| 한국어 (Hangugeo)                      | Korean              | ko           | [locale_ko.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ko.json)       |
+| Български (България)                | Bulgarian           | bg           | [locale_bg.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_bg.json)       |
+| Català (Catalunya)                  | Catalan             | ca           | [locale_ca.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ca.json)       |
+| Dansk (Danmark)                     | Danish              | da           | [locale_da.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_da.json)       |
+| Lietuvių                            | Lithuanian          | lt           | [locale_it.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_lt.json)       |
+| Nederlands                          | Dutch               | nl           | [locale_nl.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_nl.json)       |
+| اللغة العربية (alLuġah al'Arabiyye) | Arabic              | ar           | [locale_ar.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ar.json)       |
 
 ### Specifications
-| Language (translated) | Language                        | config value | file name                                                                                                                                           |
-|-----------------------|---------------------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------------------------|
-| 繁體中文（香港特別行政區）         | Chinese Traditional (Hong Kong) | zh_hk        | [language_zh_hk.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_zh_hk.properties) |
-| Français (Québec)     | Canadian French                 | fr_ca        | [language_fr_ca.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_fr_ca.properties) |
-| Português (Brasil)    | Brazilian Portuguese            | pt_br        | [language_pt_br.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_pt_br.properties) |
-| Español (Argentina)   | Argentinian Spanish             | es_ar        | [language_es_ar.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_es_ar.properties) |
-| Norsk nynorsk (Norge) | Norwegian Nynorsk               | nn_no        | [language_nn_no.properties](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/languages/language_nn_no.properties) |
-
-## Change fallback language
-
-## Customization info
-
-If you do not like the default translations, you can customize it to your own liking.
-In this section, you can find an overview of how to locate and info on when which locale is triggered.
-
-### Help Messages
-
-In this section we will explain how you can change the help messages.
-
-[!] A RESTART IS __REQUIRED__ [!]
-
-***
-
-![](https://i.imgur.com/WqDWLNQ.png)
-
-`plugins/SkinsRestorer/languages/language_<code>.properties` Line 14 till 27 are the `{description}` of the `acf-core.help_format`
-
-```properties
-skinsrestorer.help_skin_set=Changes your skin.
-skinsrestorer.help_skin_set_other=Sets the skin for a target player.
-skinsrestorer.help_skin_set_other_url=Sets the skin from an url for a target player.
-skinsrestorer.help_skin_clear=Clears your skin.
-skinsrestorer.help_skin_clear_other=Clears the skin of a target player.
-skinsrestorer.help_skin_search=Search up a skin that you want
-skinsrestorer.help_skin_update=Updates your skin.
-skinsrestorer.help_skin_update_other=Updates the skin of a target player.
-skinsrestorer.help_sr_reload=Reloads the configuration file.
-skinsrestorer.help_sr_status=Checks plugin needed API services.
-skinsrestorer.help_sr_drop=Removes players or skin data.
-skinsrestorer.help_sr_props=Displays the players current skin properties.
-skinsrestorer.help_sr_apply_skin=Re-apply the skin for target user.
-skinsrestorer.help_sr_createcustom=Create a custom server wide skin.
-```
-
-***
-command.properties:
-
-![](https://i.imgur.com/DUnadqC.png)
-
-This is what the format looks like.
-As you can see, `acf-core.help_header` & `acf-core.help_format` are used with
-the `/skin`
-
-![](https://i.imgur.com/hqUxnY6.png)
-
-When performing a wrong command, this is how it will tell you:
-
-1. warning: `acf-core.no_command_matched_search`
-2. search command matching: `acf-core.help_search_header`
-3. matching commands in `acf-core.help_format` format
-
-```properties
-acf-core.no_command_matched_search=&e[&2SkinsRestorer&e] &4Error&8: &cno such command&4: <c2>{search}</c2>.
-acf-core.help_page_information=- Showing page <c2>{page}</c2> of <c2>{totalpages}</c2> (<c3>{results}</c3> results).
-acf-core.help_no_results=&e[&2SkinsRestorer&e] &4Error&8: &cNo more results&4.
-acf-core.help_header=&3[&2&lSkinsRestorer&r&3] &7- &bShowing help for &a{commandprefix}{command}&7.
-acf-core.help_format=&2  &2{command} &a{parameters} &7{separator}&7 &f{description}
-acf-core.help_detailed_header=&3[&2&lSkinsRestorer&r&3] &7- <c1>Showing info for </c1><c2>{commandprefix}{command}</c2>
-acf-core.help_detailed_command_format=<c1>{command}</c1> <c2>{parameters}</c2> <c3>{separator} {description}</c3>
-acf-core.help_detailed_parameter_format=<c2>{name}</c2>: <c3>{description}</c3>
-acf-core.help_search_header=&3[&2&lSkinsRestorer&r&3] &7- &bCommands matching <c2>{commandprefix}{command} {search}</c2>
-```
-
-### Permissions messages
-
-```.properties
-skinsrestorer.player_has_no_permission_skin={prefix} &4Error&8: &cYou don't have permission to set this skin.
-skinsrestorer.player_has_no_permission_url={prefix} &4Error&8: &cYou don't have permission to set skins by URL.
-```
-
-&
-
-```.properties
-acf-core.permission_denied=&3[&2&lSkinsRestorer&r&3] &cI'm sorry, but you do not have permission to perform this command.
-
-```
-
-### Success messages
-
-SkinsRestorer has different Success messages when using different commands
-
-User:
-
-| Command and aliases  | Description                 | Locale                  |
-|----------------------|-----------------------------|-------------------------|
-| `/skin <skin>`       | Your skin has been changed. | `SKIN_CHANGE_SUCCESS`   |
-| `/skin set <player>` | You set %player's skin.     | `ADMIN_SET_SKIN`        |
-| `/skin clear`        | Your skin has been cleared. | `SKIN_CLEAR_SUCCESS`    |
-| `/skin update`       | Your skin has been updated. | `SUCCESS_UPDATING_SKIN` |
-
-Admin:
-
-| Command and aliases       | Description                      | Locale                        |
-|---------------------------|----------------------------------|-------------------------------|
-| `/skin clear <player>`    | Skin cleared for player %player. | `SKIN_CLEAR_ISSUER`           |
-| `/skin update <player>`   | Skin updated for player %player. | `SUCCESS_UPDATING_SKIN_OTHER` |
-| `/sr drop <player>`       | %data data dropped for %target   | `SKIN_DATA_DROPPED`           |
-| `/sr set <player> <skin>` | you set %player skin             | `ADMIN_SET_SKIN`              |
-
-### Other useful messages
-
-```properties
-skinsrestorer.not_premium={prefix} &4Error&8: &cPremium player with that name does not exist.
-skinsrestorer.error_no_skin={prefix} &4Error&8: &cThis player has no skin set.
-skinsrestorer.skin_cooldown={prefix} &4Error&8: &cYou can change your skin again in &e{0} &cseconds.
-skinsrestorer.wait_a_minute={prefix} &4Error&8: &cPlease wait a minute before requesting that skin again. (Rate Limited)
-skinsrestorer.generic_error={prefix} &4Error&8: &cAn error occurred while requesting skin data, please try again later!
-```
-
-### ERROR messages
-
-In this section we list an overview of the error messages.
-
-|         Locale          |                          occurrence/ trigger                         |           message description           |
-|:-----------------------:|----------------------------------------------------------------------|-----------------------------------------|
-|     `SKIN_DISABLED`     | when %p set config.DisabledSkins                                     | skin is disabled                        |
-|    `INVALID_PLAYER`     | when %skin is to small, nonexistent or bad link                      | %skin is not a valid username or URL.   |
-|  `ERROR_UPDATING_URL`   | when %p does /skin update while having custom (url) skin             | You can't update custom url skins       |
-| `ERROR_INVALID_URLSKIN` | when player use url that does not point to a valid skin (skin image) | Invalid skin url or format              |
-|     `ERROR_MS_FULL`     | When the API for custom url skins has timed out / offline            | API timed out while uploading skin      |
-|   `ERROR_MS_GENERIC`    | The error from our API that we send to the player                    | MS Error: %error                        |
-|     `GENERIC_ERROR`     | unused (might change in the future)                                  | An error occurred while requesting skin |
-|     `ERROR_NO_SKIN`     | setting the skin of Mojang account that has no skin                  | his player has no skin set              |
-|    `ALT_API_FAILED`     | When the alternative back-up API also fails                          | Skin Data API is overloaded             |
-|     `MS_API_FAILED`     | When the api used for custom skins is offline / busy                 |                                         |
-|     `NO_SKIN_DATA`      | When no skin data could be acquired                                  |                                         |
-
-
-### Prefix
-
-The prefix (`messages.yml` `PREFIX`) is turned on by default. And can be disabled in SkinsRestorer folder `Config.yml`
--> `DisablePrefix: false`
-
-The default value is `&e[&2SkinsRestorer&e] `
-Keep in mind how it ends with a __white space__ "` `" at the end. Depending on your punctuation preferences you can
-change this also.
-
-### SkinsGUI
-
-Some lines for the skins' menu can be found in the `messages.yml`.
-Below is a list with those lines:
-Description | line txt | Locale
-----------------|--------------|-------
-Message after performing /skins | Opening the skins menu | `MENU_OPEN`
-Inventory title | Skins menu - page %page | `SKINSMENU_TITLE_NEW`
-When hovering on the right panel | » Next Page » | `NEXT_PAGE`
-When hovering on the left panel | « Previous Page « | `PREVIOUS_PAGE`
-When hovering the center red | Remove Skin | `REMOVE_SKIN`
-hovering on a skull / skin | Click to select this skin | `SELECT_SKIN`
-
-### Custom Help
-
-If you set `UseOldSkinHelp: true` you are able to use the pre 13.6 help system in `messages.yml` -> HELP_PLAYER
+| Language (translated) | Locale                          | config value | file name                                                                                                                         |
+|-----------------------|---------------------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------|
+| 繁體中文（香港特別行政區）         | Chinese Traditional (Hong Kong) | zh_hk        | [locale_zh_hk.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_zh_hk.json) |
+| Français (Québec)     | Canadian French                 | fr_ca        | [locale_fr_ca.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_fr_ca.json) |
+| Português (Brasil)    | Brazilian Portuguese            | pt_br        | [locale_pt_br.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_pt_br.json) |
+| Español (Argentina)   | Argentinian Spanish             | es_ar        | [locale_es_ar.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_es_ar.json) |
+| Norsk nynorsk (Norge) | Norwegian Nynorsk               | nn_no        | [locale_nn_no.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_nn_no.json) |
