Also add reloading

--- a/pages/docs/configuration/locale-translations.mdx
+++ b/pages/docs/configuration/locale-translations.mdx
@@ -30,7 +30,7 @@ If your locale is missing, you can contact support [on our Discord](https://skin
 
 Inside the `plugins/SkinsRestorer/locale` folder, you can find two folders, `repository` and `custom`.
 Inside `repository`, you can find all the default locale files. These files are used when a locale is not found in the `custom` folder.
-Files inside the `repository` folder should not be edited, as they will be overwritten when updating the plugin.
+Files inside the `repository` folder should not be edited, as they will be overwritten when updating and reloading the plugin.
 If you want to edit a locale, you should copy the file from the `repository` folder to the `custom` folder and edit it there.
 Make sure to update the translation when updating the plugin, as new translations might be added/changed.
 
