--- a/pages/docs/installation.mdx
+++ b/pages/docs/installation.mdx
@@ -26,7 +26,7 @@ support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/H
 
 ## Platform Installation
 
-In this section, you can read how to set up our plugin SkinsRestorer your for Minecraft Server/Network!
+In this section, you can read how to set up SkinsRestorer on your Minecraft Server/Network!
 Select your server type below to get started.
 
 <Cards>
