Fix BungeeCord page name and fix velocity svg color

--- a/pages/docs/installation/bungeecord.mdx
+++ b/pages/docs/installation/bungeecord.mdx
@@ -78,7 +78,7 @@ In this section, you can read how to set up SkinsRestorer on your BungeeCord pro
     Restart (`/restart`, `/stop` or `/end`) all Spigot servers and the BungeeCord proxy.
 
     ### Check console for errors
-    Check the console logs of Velocity and all servers for errors
+    Check the console logs of BungeeCord and all servers for errors
     If you see any errors, report them to us on Discord.
 
     ### That's it!
