--- a/pages/docs/installation.mdx
+++ b/pages/docs/installation.mdx
@@ -8,7 +8,7 @@ import Image from "next/image";
 Here you can find everything you need for your first time installation of SkinsRestorer as well as the recommended way
 of doing so.
 If you're having issues or questions while installing, feel
-free to ask questions on our [discord server](https://skinsrestorer.net/discord).
+free to ask questions on our [Discord server](https://skinsrestorer.net/discord).
 
 ## Requirements
 
@@ -19,10 +19,8 @@ To be able to use SkinsRestorer on your server, little is needed:
 </Callout>
 
 * Java from at least version 8
-* Internet connection through ports 80 (http) & 443 (https) & 53 (dns) (
-issues? > [troubleshoot connection](/docs/troubleshooting))
-* Minecraft server versions and variants that we
-support [[check overview](https://github.com/SkinsRestorer/SkinsRestorerX/blob/HEAD/README.md#telescope-compatibility)]
+* Internet connection to the [required domains](/docs/troubleshooting/cannot-fetch-new-skins)
+* Minecraft versions and platforms [that we support](https://github.com/SkinsRestorer/SkinsRestorerX/blob/HEAD/README.md#telescope-compatibility)
 
 ## Platform Installation
 
