--- a/pages/docs/troubleshooting.mdx
+++ b/pages/docs/troubleshooting.mdx
@@ -11,7 +11,7 @@ First good steps to make sure you did everything right.
 ### Basic Spigot Troubleshooting
 
 <Callout type="info" emoji="ℹ️">
-    Kindly check these steps below before asking for support on discord!
+    Kindly check these steps below before asking for support on Discord!
 </Callout>
 
 1. Check
