--- a/pages/docs/troubleshooting/incompatibility-list.mdx
+++ b/pages/docs/troubleshooting/incompatibility-list.mdx
@@ -1,5 +1,8 @@
 # Incompatibility list
 
+SkinsRestorer may collide with third-party software such as plugins, mods, launchers, etc.
+Here is a list of known incompatible software.
+
 ## Incompatible clients
 
 Launchers that have built-in skin mods or other game-altering mods that block SkinsRestorer.
@@ -8,15 +11,15 @@ Launchers that have built-in skin mods or other game-altering mods that block Sk
 
 ## General plugin types causing issues
 
-* Mostly all other skin plugins like `MySKin`
-* `Skript` (They can hook into skins)
+* Other skin plugins like `MySKin`
+* `Skript` (They can also hook into skins)
 * Custom world plugins
 * Some TabList plugins
 
 ## Plugins that need config change
 
-* `FastLogin` -> FastLogin config.yml forwardSkin: false
-* `MundoSK` -> MundoSK config.yml usecustomskins: false
+* `FastLogin` -> FastLogin `config.yml` -> `forwardSkin: false`
+* `MundoSK` -> MundoSK `config.yml` -> `usecustomskins: false`
 
 ## Known plugin list
 
