--- a/pages/docs/configuration/commands-permissions.mdx
+++ b/pages/docs/configuration/commands-permissions.mdx
@@ -8,7 +8,7 @@ import {Callout} from 'nextra-theme-docs'
 
 Below is a list of commands and permissions. For each permission, you need to have the parent's permission. so for
 example:
-
+asdasd
 If you wish to give a player "`skinsrestorer.command.set.other`" make sure you also give
 BOTH `skinsrestorer.command.set` permission and the main "`skinsrestorer.command`" permission
 
